--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
 
     <main>
-      <section style="background-color: #2e2f42" class="section-hero">
+      <section class="section-hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
