--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <main>
       <section class="section-hero">
-        <div>
+        <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
