--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       </section>
 
       <section class="section">
+        <h2>Our benefits</h2>
         <ul class="benefits-list">
           <li class="benefits-item">
             <h3 class="benefits-subtitle card-subtitle">Strategy</h3>
