--- a/index.html
+++ b/index.html
@@ -99,52 +99,54 @@
       </section>
 
       <section class="section section-team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./images/team-1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle card-subtitle">Mark Guerrero</h3>
-            <p class="team-text card-text">Product Designer</p>
-          </li>
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/team-1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle card-subtitle">Mark Guerrero</h3>
+              <p class="team-text card-text">Product Designer</p>
+            </li>
 
-          <li class="team-item">
-            <img
-              src="./images/team-2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle card-subtitle">Tom Ford</h3>
-            <p class="team-text card-text">Frontend Developer</p>
-          </li>
+            <li class="team-item">
+              <img
+                src="./images/team-2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle card-subtitle">Tom Ford</h3>
+              <p class="team-text card-text">Frontend Developer</p>
+            </li>
 
-          <li class="team-item">
-            <img
-              src="./images/team-3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle card-subtitle">Camila Garcia</h3>
-            <p class="team-text card-text">Marketing</p>
-          </li>
+            <li class="team-item">
+              <img
+                src="./images/team-3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle card-subtitle">Camila Garcia</h3>
+              <p class="team-text card-text">Marketing</p>
+            </li>
 
-          <li class="team-item">
-            <img
-              src="./images/team-4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle card-subtitle">Daniel Wilson</h3>
-            <p class="team-text card-text">UI Designer</p>
-          </li>
-        </ul>
+            <li class="team-item">
+              <img
+                src="./images/team-4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle card-subtitle">Daniel Wilson</h3>
+              <p class="team-text card-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section section-portfolio">
