--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@
             </li>
           </ul>
         </div>
-        <h2 class="section-title">Our Portfolio</h2>
+      </section>
+
+      <section class="section section-portfolio">
+        <h3 class="section-title">Our Portfolio</h3>
 
         <ul class="portfolio-list">
           <li class="portfolio-item">
@@ -157,8 +160,10 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subtitle card-subtitle">Banking App</h3>
-            <p class="portfolio-text card-text">App</p>
+            <div class="content">
+              <h4 class="portfolio-subtitle card-subtitle">Banking App</h4>
+              <p class="portfolio-text card-text">App</p>
+            </div>
           </li>
 
           <li class="portfolio-item">
@@ -168,7 +173,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subtitle card-subtitle">Cashless Payment</h3>
+            <h4 class="portfolio-subtitle card-subtitle">Cashless Payment</h4>
             <p class="portfolio-text card-text">Marketing</p>
           </li>
 
@@ -179,7 +184,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subtitle card-subtitle">Meditation App</h3>
+            <h4 class="portfolio-subtitle card-subtitle">Meditation App</h4>
             <p class="portfolio-text card-text">App</p>
           </li>
 
@@ -190,7 +195,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subtitle card-subtitle">Taxi Service</h3>
+            <h4 class="portfolio-subtitle card-subtitle">Taxi Service</h4>
             <p class="portfolio-text card-text">Marketing</p>
           </li>
 
@@ -201,9 +206,9 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subtitle card-subtitle">
+            <h4 class="portfolio-subtitle card-subtitle">
               Screen Illustrations
-            </h3>
+            </h4>
             <p class="portfolio-text card-text">Design</p>
           </li>
 
@@ -214,7 +219,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subtitle card-subtitle">Online Courses</h3>
+            <h4 class="portfolio-subtitle card-subtitle">Online Courses</h4>
             <p class="portfolio-text card-text">Marketing</p>
           </li>
         </ul>
