--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </section>
 
       <section class="section section-portfolio">
-        <h3 class="section-title">Our Portfolio</h3>
+        <h2 class="section-title">Our Portfolio</h2>
 
         <ul class="portfolio-list">
           <li class="portfolio-item">
@@ -160,10 +160,8 @@
               width="360"
               height="300"
             />
-            <div class="content">
-              <h4 class="portfolio-subtitle card-subtitle">Banking App</h4>
-              <p class="portfolio-text card-text">App</p>
-            </div>
+            <h3 class="portfolio-subtitle card-subtitle">Banking App</h3>
+            <p class="portfolio-text card-text">App</p>
           </li>
 
           <li class="portfolio-item">
@@ -173,7 +171,7 @@
               width="360"
               height="300"
             />
-            <h4 class="portfolio-subtitle card-subtitle">Cashless Payment</h4>
+            <h3 class="portfolio-subtitle card-subtitle">Cashless Payment</h3>
             <p class="portfolio-text card-text">Marketing</p>
           </li>
 
@@ -184,10 +182,11 @@
               width="360"
               height="300"
             />
-            <h4 class="portfolio-subtitle card-subtitle">Meditation App</h4>
+            <h3 class="portfolio-subtitle card-subtitle">Meditation App</h3>
             <p class="portfolio-text card-text">App</p>
           </li>
-
+        </ul>
+        <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
               src="./images/portfolio-4.jpg"
@@ -195,7 +194,7 @@
               width="360"
               height="300"
             />
-            <h4 class="portfolio-subtitle card-subtitle">Taxi Service</h4>
+            <h3 class="portfolio-subtitle card-subtitle">Taxi Service</h3>
             <p class="portfolio-text card-text">Marketing</p>
           </li>
 
@@ -206,9 +205,9 @@
               width="360"
               height="300"
             />
-            <h4 class="portfolio-subtitle card-subtitle">
+            <h3 class="portfolio-subtitle card-subtitle">
               Screen Illustrations
-            </h4>
+            </h3>
             <p class="portfolio-text card-text">Design</p>
           </li>
 
@@ -219,7 +218,7 @@
               width="360"
               height="300"
             />
-            <h4 class="portfolio-subtitle card-subtitle">Online Courses</h4>
+            <h3 class="portfolio-subtitle card-subtitle">Online Courses</h3>
             <p class="portfolio-text card-text">Marketing</p>
           </li>
         </ul>
