--- a/index.html
+++ b/index.html
@@ -154,22 +154,17 @@
 
         <ul class="portfolio-list">
           <li class="portfolio-item">
-            <img
-              src="./images/portfolio-1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
+            <img src="./images/portfolio-0.jpg" alt="Banking App" />
             <h3 class="portfolio-subtitle card-subtitle">Banking App</h3>
             <p class="portfolio-text card-text">App</p>
           </li>
 
           <li class="portfolio-item">
             <img
-              src="./images/portfolio-2.jpg"
+              src="./images/портфоліо-2.jpg"
               alt="Cashless Payment"
               width="360"
-              height="300"
+              height="400"
             />
             <h3 class="portfolio-subtitle card-subtitle">Cashless Payment</h3>
             <p class="portfolio-text card-text">Marketing</p>
@@ -177,7 +172,7 @@
 
           <li class="portfolio-item">
             <img
-              src="./images/portfolio-3.jpg"
+              src="./images/portfolio 3.jpg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -185,13 +180,12 @@
             <h3 class="portfolio-subtitle card-subtitle">Meditation App</h3>
             <p class="portfolio-text card-text">App</p>
           </li>
-        </ul>
-        <ul class="portfolio-list">
+
           <li class="portfolio-item">
             <img
-              src="./images/portfolio-4.jpg"
+              src="./images/portfolio-4.png"
               alt="Taxi Service"
-              width="360"
+              width="260"
               height="300"
             />
             <h3 class="portfolio-subtitle card-subtitle">Taxi Service</h3>
