--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
           <li class="portfolio-item">
             <img
-              src="./images/портфоліо-2.jpg"
+              src="./images/portfolio-2.jpg"
               alt="Cashless Payment"
               width="360"
               height="400"
