--- a/index.html
+++ b/index.html
@@ -154,7 +154,12 @@
 
         <ul class="portfolio-list">
           <li class="portfolio-item">
-            <img src="./images/portfolio-1.jpg" alt="Banking App" />
+            <img
+              src="./images/portfolio-1.jpg"
+              alt="Banking App"
+              width="360"
+              height="420"
+            />
             <h3 class="portfolio-subtitle card-subtitle">Banking App</h3>
             <p class="portfolio-text card-text">App</p>
           </li>
@@ -164,7 +169,7 @@
               src="./images/portfolio-2.jpg"
               alt="Cashless Payment"
               width="360"
-              height="400"
+              height="420"
             />
             <h3 class="portfolio-subtitle card-subtitle">Cashless Payment</h3>
             <p class="portfolio-text card-text">Marketing</p>
@@ -175,7 +180,7 @@
               src="./images/portfolio-3.jpg"
               alt="Meditation App"
               width="360"
-              height="300"
+              height="420"
             />
             <h3 class="portfolio-subtitle card-subtitle">Meditation App</h3>
             <p class="portfolio-text card-text">App</p>
@@ -185,8 +190,8 @@
             <img
               src="./images/portfolio-4.jpg"
               alt="Taxi Service"
-              width="260"
-              height="300"
+              width="360"
+              height="420"
             />
             <h3 class="portfolio-subtitle card-subtitle">Taxi Service</h3>
             <p class="portfolio-text card-text">Marketing</p>
@@ -197,7 +202,7 @@
               src="./images/portfolio-5.jpg"
               alt="Screen Illustrations"
               width="360"
-              height="300"
+              height="420"
             />
             <h3 class="portfolio-subtitle card-subtitle">
               Screen Illustrations
@@ -210,7 +215,7 @@
               src="./images/portfolio-6.jpg"
               alt="Online Courses"
               width="360"
-              height="300"
+              height="420"
             />
             <h3 class="portfolio-subtitle card-subtitle">Online Courses</h3>
             <p class="portfolio-text card-text">Marketing</p>
